[gd_scene load_steps=9 format=3 uid="uid://dhk3eq7mwneqc"]

[ext_resource type="Script" uid="uid://cbod6wbsenf1o" path="res://scripts/appletree.gd" id="1_34sab"]
[ext_resource type="Texture2D" uid="uid://cty1o2u5qfsja" path="res://assets/game/Objects/Basic Grass Biom things 1.png" id="2_fcvxk"]
[ext_resource type="Resource" uid="uid://csmg3aktoakof" path="res://inventory/item/apple.tres" id="2_xa685"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xa685"]
atlas = ExtResource("2_fcvxk")
region = Rect2(52, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00fy1"]
atlas = ExtResource("2_fcvxk")
region = Rect2(20, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5kkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa685")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00fy1")
}],
"loop": true,
"name": &"no apples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ex41"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_fcvxk"]
radius = 5.0990195

[node name="appletree" type="Node2D"]
y_sort_enabled = true
position = Vector2(0, -13)
script = ExtResource("1_34sab")
item = ExtResource("2_xa685")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_x5kkf")
animation = &"no apples"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_2ex41")

[node name="growthtimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_fcvxk")
debug_color = Color(0.97230154, 0, 0.44529122, 0.41960785)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="growthtimer" to="." method="_on_growthtimer_timeout"]
